--- a/templates/Factory/argocd-appproject-details.yaml
+++ b/templates/Factory/argocd-appproject-details.yaml
@@ -1,24 +1,17 @@
 apiVersion: front.in-cloud.io/v1alpha1
 kind: Factory
 metadata:
-  name: configmap-details
+  name: argocd-appproject-details
 spec:
-  # Unique key for this factory configuration
-  key: configmap-details
-
-  # Sidebar category tags
+  key: argocd-appproject-details
   sidebarTags:
-    - configmap-sidebar
-
-  # Enable scrollable content card for main section
+    - argocd-appprojects-sidebar
   withScrollableMainContentCard: true
-
-  # API endpoint for fetching ConfigMap details
   urlsToFetch:
-    - "/api/clusters/{2}/k8s/api/v1/namespaces/{3}/configmaps/{6}"
+    - "/api/clusters/{2}/k8s/apis/argoproj.io/v1alpha1/namespaces/{3}/appprojects/{6}"
 
+  # Header row with badge and appprojects name
   data:
-    # === HEADER ROW ===
     - type: antdFlex
       data:
         id: header-row
@@ -27,12 +20,12 @@ spec:
         style:
           marginBottom: 24px
       children:
-        # Badge with resource short name
+        # appprojects badge
         - type: antdText
           data:
-            id: header-badge
-            text: CM
-            title: ConfigMap
+            id: badge-appprojects
+            text: S
+            title: appprojects
             style:
               fontSize: 20px
               lineHeight: 24px
@@ -43,92 +36,90 @@ spec:
               textAlign: center
               whiteSpace: nowrap
               color: "#fff"
-              backgroundColor: "#40199a"
+              backgroundColor: "#c46100"
               fontFamily: RedHatDisplay, Overpass, overpass, helvetica, arial, sans-serif
               fontWeight: 400
-
-        # ConfigMap name
+        # appprojects name
         - type: parsedText
           data:
-            id: header-name
+            id: header-appprojects-name
             text: "{reqsJsonPath[0]['.metadata.name']['-']}"
             style:
               fontSize: 20px
               lineHeight: 24px
               fontFamily: RedHatDisplay, Overpass, overpass, helvetica, arial, sans-serif
 
-    # === MAIN TABS ===
+    # Tabs with Details and YAML
     - type: antdTabs
       data:
-        id: tabs-root
-        defaultActiveKey: details
+        id: appprojects-tabs
+        defaultActiveKey: "details"
         items:
-          # ------ DETAILS TAB ------
-          - key: details
-            label: Details
+          # Details tab with metadata and spec info
+          - key: "details"
+            label: "Details"
             children:
-              # Main card container for details section
               - type: ContentCard
                 data:
                   id: details-card
                   style:
                     marginBottom: 24px
                 children:
-                  # Section title
+                  # Title
                   - type: antdText
                     data:
                       id: details-title
-                      text: ConfigMap details
+                      text: "AppProject details"
                       strong: true
                       style:
-                        fontSize: 20px
+                        fontSize: 20
                         marginBottom: 12px
 
-                  # Spacer for visual separation
+                  # Spacer
                   - type: Spacer
                     data:
                       id: details-spacer
-                      $space: 16
+                      "$space": 16
 
-                  # Grid layout: left and right columns
+                  # Two-column layout
                   - type: antdRow
                     data:
                       id: details-grid
                       gutter: [48, 12]
                     children:
-                      # LEFT COLUMN: Metadata and links
+                      # Left column: metadata
                       - type: antdCol
                         data:
-                          id: details-col-left
+                          id: col-left
                           span: 12
                         children:
                           - type: antdFlex
                             data:
-                              id: left-stack
+                              id: col-left-stack
                               vertical: true
                               gap: 24
                             children:
-                              # Resource name block
+                              # Name block
                               - type: antdFlex
                                 data:
-                                  id: field-name-block
+                                  id: meta-name-block
                                   vertical: true
                                   gap: 4
                                 children:
                                   - type: antdText
                                     data:
-                                      id: field-name-label
-                                      text: Name
+                                      id: meta-name-label
                                       strong: true
+                                      text: "Name"
                                   - type: parsedText
                                     data:
-                                      id: field-name-value
+                                      id: meta-name-value
                                       text: "{reqsJsonPath[0]['.metadata.name']['-']}"
 
-                              # Namespace link block
+                              # Namespace link
                               - type: antdFlex
                                 data:
-                                  id: namespace-links-block
+                                  id: meta-namespace-block
                                   vertical: true
                                   gap: 8
                                 children:
@@ -141,68 +132,73 @@ spec:
                                     ) | nindent 34 
                                   }}
 
-                              # Labels display block
+                              # Labels
                               - type: antdFlex
                                 data:
-                                  id: labels-block
+                                  id: meta-labels-block
                                   vertical: true
                                   gap: 8
                                 children:
-                                  {{ include "incloud-web-resources.factory.labels" . | nindent 34}}
+                                  {{ include "incloud-web-resources.factory.labels" . | nindent 38}}
 
-                              # Annotations counter block
+                              # Annotations
                               - type: antdFlex
                                 data:
-                                  id: annotations-counter-block
+                                  id: meta-annotations-block
                                   vertical: true
                                   gap: 4
                                 children:
-                                  {{ include "incloud-web-resources.factory.counters.annotations" . | nindent 30}}
+                                  {{ include "incloud-web-resources.factory.counters.annotations" . | nindent 38}}
 
-                              # Creation time block
+                              # Created timestamp
                               - type: antdFlex
                                 data:
-                                  id: created-time-block
+                                  id: meta-created-block
                                   vertical: true
                                   gap: 4
                                 children:
                                   {{ include "incloud-web-resources.factory.time.create" (dict
                                     "req" ".metadata.creationTimestamp"
                                     "text" "Created"
-                                    ) | nindent 30
+                                  ) | nindent 38
                                   }}
 
-                              # Owner information block
+                              # Owner block
                               - type: antdFlex
                                 data:
-                                  id: owner-block
+                                  id: meta-owner-block
                                   vertical: true
                                   gap: 4
                                 children:
                                   - type: antdText
                                     data:
-                                      id: owner-label
-                                      text: Owner
+                                      id: meta-owner-label
                                       strong: true
-                                  - type: parsedText
+                                      text: "Owner"
+                                  - type: antdFlex
                                     data:
-                                      id: owner-value
-                                      strong: true
-                                      text: "No owner"
-                                      style:
-                                        color: red
+                                      id: meta-owner-flex
+                                      gap: 6
+                                      align: center
+                                    children:
+                                      - type: parsedText
+                                        data:
+                                          id: owner-value
+                                          strong: true
+                                          text: "No owner"
+                                          style:
+                                            color: red
 
-          # ------ YAML TAB ------
+          # YAML tab
           - key: yaml
             label: YAML
             children:
-              # YAML editor for resource manifest
               - type: YamlEditorSingleton
                 data:
                   id: yaml-editor
                   cluster: "{2}"
                   isNameSpaced: true
                   type: builtin
-                  typeName: configmaps
+                  typeName: appprojectss
                   prefillValuesRequestIndex: 0
                   substractHeight: 400
