--- a/templates/TableUriMapping/argoproj.io.v1alpha1.applications.yaml
+++ b/templates/TableUriMapping/argoproj.io.v1alpha1.applications.yaml
@@ -1,32 +1,31 @@
-apiVersion: v1
-items:
-  - apiVersion: front.in-cloud.io/v1alpha1
-    kind: TableUriMapping
-    metadata:
-      name: "stock-cluster-default-argoproj.io.v1alpha1.applications"
-    spec:
-      keysToParse:
-        - metadata
-        - name
-      keysToParseSecond:
-        - metadata
-        - namespace
-      id: "stock-cluster-/argoproj.io/v1alpha1/applications"
-      pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/argocd-application-details/~recordValue~"
-
-  - apiVersion: front.in-cloud.io/v1alpha1
-    kind: TableUriMapping
-    metadata:
-      name: "stock-namespace-default-argoproj.io.v1alpha1.applications"
-    spec:
-      keysToParse:
-        - metadata
-        - name
-      keysToParseSecond:
-        - metadata
-        - namespace
-      id: "stock-namespace-/argoproj.io/v1alpha1/applications"
-      pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/argocd-application-details/~recordValue~"
-
-kind: List
+{{- if .Values.addons.argocd.enabled  }}
+---
+apiVersion: front.in-cloud.io/v1alpha1
+kind: TableUriMapping
 metadata:
+  name: "stock-cluster-default-argoproj.io.v1alpha1.applications"
+spec:
+  keysToParse:
+    - metadata
+    - name
+  keysToParseSecond:
+    - metadata
+    - namespace
+  id: "stock-cluster-/argoproj.io/v1alpha1/applications"
+  pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/argocd-application-details/~recordValue~"
+
+---
+apiVersion: front.in-cloud.io/v1alpha1
+kind: TableUriMapping
+metadata:
+  name: "stock-namespace-default-argoproj.io.v1alpha1.applications"
+spec:
+  keysToParse:
+    - metadata
+    - name
+  keysToParseSecond:
+    - metadata
+    - namespace
+  id: "stock-namespace-/argoproj.io/v1alpha1/applications"
+  pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/argocd-application-details/~recordValue~"
+{{- end }}
